[package]
name = "tokio-cron-scheduler2"
version = "0.1.0"
authors = ["Michael van Niekerk <mike@agri-io.co.za>", "Erich Lohrmann <erichlohrmann@gmail.com>"]
edition = "2021"

documentation = "https://docs.rs/tokio_cron_scheduler/"
repository = "https://github.com/erichCompSci/tokio-cron-scheduler"

description = "Schedule tasks on tokio using cron-like annotation. Also schedule tasks at an instant or repeat them at a fixed duration."

license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["cron", "crontab", "scheduler", "job", "tokio"]

categories = ["date-and-time"]

[dependencies]
tokio = { version = "1", features = ["full"] }
cron = "0.8"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }

