[package]
name = "jact"
version = "0.4.2"
authors = ["Erich Lohrmann <erichlohrmann@gmail.com>"]
edition = "2021"

repository = "https://github.com/erichCompSci/jact"

description = "Schedule tasks on tokio using cron-like annotation. Also schedule tasks at an instant or repeat them at a fixed duration."

license = "MIT/Apache-2.0"

readme = "README.md"

keywords = ["cron", "scheduler", "job", "tokio", "async"]

categories = ["date-and-time"]

[dependencies]
tokio = { version = "1", features = ["full"] }
cron = "^0.12"
chrono = "^0.4"
uuid = { version = "^0.8", features = ["v4"] }
futures = "^0.3.17"
scopeguard = "^1.1.0"
async-trait = "^0.1.52"

[dev-dependencies]
tokio-test = "^0.4.2"
